커뮤니티 버튼 연결

--- a/src/main/resources/templates/thymeleaf/fo/community/community_event.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_event.html
@@ -101,11 +101,11 @@
         <div class="community_wrap">
             <div id="nav">
                 <ul>
-                    <li><a href="#">홈</a></li>
-                    <li><a href="#">작품자랑</a></li>
-                    <li><a href="#">전시후기&소개</a></li>
-                    <li><a href="#" class="over">이슈</a></li>
-                    <li><a href="#">이벤트</a></li>
+                    <li><a href="/community/main">홈</a></li>
+                    <li><a href="/community/worksList">작품자랑</a></li>
+                    <li><a href="/community/exhintList">전시후기&소개</a></li>
+                    <li><a href="/community/knowhowList">노하우</a></li>
+                    <li><a href="/community/event" class="over">이벤트</a></li>
                     <li class="pt0 mt10"><button class="btn_recording">기록하기</button></li>
                 </ul>
             </div>
