회원가입 비밀번호 규칙 간소화 / 노하우 -> 이슈 워딩 변경

--- a/src/main/resources/templates/thymeleaf/fo/community/community_works.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_works.html
@@ -104,7 +104,7 @@
                     <li><a href="/community/main">홈</a></li>
                     <li><a href="/community/worksList" class="over">작품자랑</a></li>
                     <li><a href="/community/exhintList">전시후기&소개</a></li>
-                    <li><a href="/community/knowhowList">노하우</a></li>
+                    <li><a href="/community/issueList">이슈</a></li>
                     <li><a href="/community/event">이벤트</a></li>
                     <li class="pt0 mt10"><button class="btn_recording">기록하기</button></li>
                 </ul>
